--- a/scss/index.scss
+++ b/scss/index.scss
@@ -68,6 +68,13 @@ main {
         outline: none;
         border: 0;
     }
+
+    a {
+        text-decoration: none;
+        color: white ;
+    }
+
+
 }
 
 
