--- a/scss/index.scss
+++ b/scss/index.scss
@@ -41,6 +41,8 @@ header {
 
     #logo {
         background-color: $blue;
+        opacity: 0;
+        visibility: hidden;
     }
 
     .theme-icons {
@@ -48,8 +50,8 @@ header {
     }
 
     #moon, #sun {
-        width: 30px;
-        height: 30px;
+        width: 25px;
+        height: 25px;
 
         position: absolute;
         top: 0;
@@ -58,10 +60,14 @@ header {
 
     #sun {
         display: none;
+
+        & path {
+           fill:$white; 
+        }
     }
 
     #moon {
-        display:block ;
+        display:block;
     }
 }
 
@@ -87,9 +93,21 @@ main {
         align-items: center;
         justify-content: center;
 
+        &::after {
+            content: '';
+            position: absolute;
+            top: 60%;
+            left: 20px;
+            width: 20%;
+            height: 1px;
+            background-color: $blue;
+
+
+        }
+
 
         #border {
-            border:5px solid $blue;
+            border:3px solid $blue;
             border-radius: 5px;
             position: absolute;
 
@@ -121,12 +139,15 @@ main {
             text-align: center;
             font-family: welcome-text;
             font-size: 70px;
+            z-index: 100;
         }
     }
+
 
     p {
         text-align: center;
         letter-spacing: 1px;
+        color: $black;
     }
 
     button {
@@ -146,33 +167,6 @@ main {
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 .input {
     width: 100%;
     height: auto;
@@ -181,6 +175,7 @@ main {
     align-items: center;
     justify-content: space-between;
     padding: 20px;
+    color: $white;
 
     .input-control {
         position: relative;
@@ -202,10 +197,12 @@ main {
         @extend %input;
         width: 50px;
         height: 20px;
-
-        opacity: 1;
         position: relative;
         z-index: 1000;
+
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
 
         &::before {
             content: '';
@@ -227,7 +224,6 @@ main {
         
 
 
-
         &.active::before {
             top: 7px;
             transform: rotate(135deg);
@@ -237,6 +233,11 @@ main {
             display: flex;
         }
 
+    }
+
+
+    #grade-value {
+        font-size: 14px;
     }
 
 
@@ -258,6 +259,7 @@ main {
             width: 100%;
             color: white;
             padding: 5px;
+            font-size: 15px;
         }
 
         #grade:hover {
@@ -268,20 +270,15 @@ main {
     }
 
 
-    
-
-
-
-
-
-
 
     button {
         @extend %input;
         width: 100px;
-        height: 20px;  
+        height: 20px; 
+        color: $white; 
     }
 }
+
 
 
 
@@ -298,6 +295,7 @@ main {
         height: 30px;
         padding: 0 10px;
         background-color: blue;
+        color: $white;
         border-radius: 10px;
 
         margin-bottom: 20px;
@@ -315,9 +313,9 @@ main {
         width: 100%;
         height: 20px;
         background-color: blue;
+        color: $white;
         outline: none;
         border: 0;
-        opacity: 60%;
         border-radius: 5px;
         margin-top: 50px;
     }
