--- a/scss/index.scss
+++ b/scss/index.scss
@@ -342,6 +342,7 @@ main {
 
         &.deleted {
             transform: translateX(-150%);
+            transition: all 0.3s ease-in-out;
         }
     }
 
