--- a/scss/index.scss
+++ b/scss/index.scss
@@ -15,6 +15,36 @@ body {
     background-color: $white;
 }
 
+.error-msg {
+    width: 80%;
+    height: 150px;
+    padding: 40px 20px;
+    border-radius: 10px;
+    background-color: $white;
+    z-index: 3000;
+    position: absolute;
+    top: 25%;
+    left: 10%;
+
+    text-align: center;
+    font-size: 20px;
+    letter-spacing: 2px;
+
+
+    .close-alert {
+        width: 100%;
+        height: 30px;
+        background-color: $blue;
+        border-radius: 5px;
+        margin-top: 30px;
+        color: $white;
+        text-align: center;
+        letter-spacing: 5px;
+    }
+}
+
+
+
 .container {
     width: 1440px;
     height: auto;
