--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -19,3 +19,17 @@ $white:#fff;
     text-indent: 10px;
 }
 
+
+@keyframes animate {
+    0% {
+        transform: translateY(0);
+    }
+
+    50% {
+        transform: translateY(2px);
+    }
+
+    100% {
+        transform: translateY(0);
+    }
+}
