--- a/scss/_homepage.scss
+++ b/scss/_homepage.scss
@@ -1,6 +1,6 @@
 main {
     width: 1440px;
-    margin-top: 50px;
+    margin-top: 0px;
     padding: 20px;
 
     display: flex;
@@ -10,7 +10,7 @@ main {
     .image {
         width: 100%;
         height: 300px;
-        margin-bottom: 30px;
+        margin-bottom: 60px;
         border-radius: 5px;
 
         position: relative;
@@ -30,7 +30,6 @@ main {
             border:3px solid $blue;
             border-radius: 5px;
             position: absolute;
-
 
 
             &:first-of-type {
@@ -54,28 +53,38 @@ main {
             }
         }
 
-        h1 {
-            color: $blue;
-            text-align: center;
-            font-family: welcome-text;
-            font-size: 70px;
-            z-index: 100;
-        }
     }
 
 
     p {
-        text-align: center;
+        text-align: right;
+        font-family: welcome-text;
         letter-spacing: 1px;
         color: $black;
+        line-height: 25px;
+
+        position: relative;
+
+        &::before {
+            content: '';
+            position: absolute;
+            top: 30px;
+            left: 100px;
+            width: 20px;
+            height: 10px;
+            background-color: $blue;
+            opacity: 30%;
+            border-radius: 30px;
+        }
     }
 
     a {
         width: 100%;
-        height: 30px;
+        height: 40px;
         border-radius: 8px;
-        margin-top: 90px;
+        margin-top: 100px;
         text-decoration: none;
+        position: relative;
 
         button {
             background-color: $blue;
@@ -87,6 +96,12 @@ main {
             border: 0;
     
             text-align: center;
+            font-size: 20px;
+            font-family: welcome-text;
+            letter-spacing: 2px;
+            position: relative;
+
         }
+
     }
 }
