--- a/scss/index.scss
+++ b/scss/index.scss
@@ -49,6 +49,7 @@ header {
         border-radius: 50%;
         transform: scale(110%);
         animation: animate 3s ease-in-out infinite;
+        box-shadow: 1px 1px 70px 3px $blue;
 
         &::before {
             content:'';
@@ -61,23 +62,29 @@ header {
             width: 30px;
             height: 30px;
             border-radius: 50%;
-           animation: animate 3s ease-in-out infinite;
+            animation: animate 3s ease-in-out infinite;
         }
 
+    }
 
+    #hamburger-menu {
+        padding: 2px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-around;
+        box-shadow: 1px 1px 70px 3px $blue;
 
-        @keyframes animate {
-            0% {
-                transform: translateY(0);
-            }
+        & > * {
+            width: 80%;
+            height: 2px;
+            background-color: $white;
+        }
 
-            50% {
-                transform: translateY(2px);
-            }
-
-            100% {
-                transform: translateY(0);
-            }
+        &:hover {
+            transform: scale(92%);
+            cursor:pointer;
+            transition: all 0.2s ease-in;
         }
     }
 
