--- a/scss/_calculate.scss
+++ b/scss/_calculate.scss
@@ -1,4 +1,13 @@
 
+
+img {
+    width: 100px;
+    height: 40px;
+    margin-top: 20px;
+    margin-left: -20px;
+}
+
+
 .input {
     width: 100%;
     height: auto;
