--- a/scss/_calculate.scss
+++ b/scss/_calculate.scss
@@ -30,7 +30,7 @@ img {
         &::placeholder {
             color: $white;
             font-family: welcome-text;
-            font-size: 15px;
+            font-size: 13px;
             opacity: 80%;
             letter-spacing: 1px;
         }
@@ -44,7 +44,7 @@ img {
         &::placeholder {
             color: $white;
             font-family: welcome-text;
-            font-size: 15px;
+            font-size: 13px;
             opacity: 80%;
             letter-spacing: 1px;
         }
@@ -96,6 +96,8 @@ img {
     #grade-value {
         font-size: 14px;
         color: $white;
+        text-align: center;
+        margin-top: 2px;
     }
 
 
@@ -135,12 +137,14 @@ img {
 
     button {
         @extend %input;
-        width: 100px;
-        height: 20px; 
+        width: 120px;
+        height: 25px; 
         color: $white; 
-        text-align: center;
-        font-size: 13px;
-        box-shadow: 1px 1px 30px 0px rgba(0, 0, 0, 0.3);
+        font-family: welcome-text;
+        letter-spacing: 1px;
+        font-size: 15px;
+        box-shadow: 1px 1px 10px 0px rgba(0, 0, 0, 0.3);
+        padding-right: 10px;
     }
 }
 
@@ -207,6 +211,10 @@ img {
         width: 100%;
         height: 30px;
         background-color: blue;
+
+        font-family: welcome-text;
+        font-size: 20px;
+        letter-spacing: 2px;
         color: $white;
         outline: none;
         border: 0;
