--- a/scss/_homepage.scss
+++ b/scss/_homepage.scss
@@ -95,6 +95,8 @@ main {
             outline: none;
             border: 0;
     
+            box-shadow: 2px 2px 15px 2px rgba(0, 0, 0, 0.3);
+
             text-align: center;
             font-size: 20px;
             font-family: welcome-text;
