--- a/scss/_calculate.scss
+++ b/scss/_calculate.scss
@@ -20,6 +20,7 @@ img {
 
     .input-control {
         position: relative;
+        margin-top: 15px;
     }
 
     #course-name {
@@ -94,7 +95,7 @@ img {
 
 
     #grade-value {
-        font-size: 14px;
+        font-size: 15px;
         color: $white;
         text-align: center;
         margin-top: 2px;
@@ -120,7 +121,7 @@ img {
         #grade{
             width: 100%;
             color: white;
-            padding: 5px 10px;
+            padding: 6px 10px;
             font-size: 15px;
             font-family: welcome-text;
 
@@ -209,7 +210,7 @@ img {
 
     button {
         width: 100%;
-        height: 30px;
+        height: 25px;
         background-color: blue;
 
         font-family: welcome-text;
@@ -253,8 +254,8 @@ img {
 
 .blur {
     position: absolute;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     background-color: rgba(0, 0, 0, 0.7);
     z-index: 1500;
     display: none;
