--- a/scss/_calculate.scss
+++ b/scss/_calculate.scss
@@ -122,7 +122,7 @@ img {
             width: 100%;
             color: white;
             padding: 5px 10px;
-            font-size: 13px;
+            font-size: 18px;
             font-family: welcome-text;
 
         }
@@ -139,12 +139,12 @@ img {
     button {
         @extend %input;
         width: 120px;
-        height: 25px; 
+        height: 20px; 
         color: $white; 
         font-family: welcome-text;
         letter-spacing: 1px;
         font-size: 15px;
-        box-shadow: 1px 1px 10px 0px rgba(0, 0, 0, 0.3);
+        box-shadow: 1px 1px 10px 0px rgba(0, 0, 0, 0.1);
         padding-right: 10px;
     }
 }
@@ -210,11 +210,11 @@ img {
 
     button {
         width: 100%;
-        height: 25px;
+        height: 23px;
         background-color: blue;
 
         font-family: welcome-text;
-        font-size: 20px;
+        font-size: 18px;
         letter-spacing: 2px;
         color: $white;
         outline: none;
@@ -260,6 +260,8 @@ img {
     z-index: 1500;
     display: none;
 }
+
+
 
 .result-display {
     width: 80%;
@@ -308,23 +310,29 @@ img {
 
 .error-msg {
     width: 80%;
-    height: 150px;
-    padding: 40px 20px;
+    height: 100px;
+    padding: 20px;
     border-radius: 10px;
     background-color: $white;
     z-index: 3000;
     position: absolute;
-    top: 25%;
+    top: 30%;
     left: 10%;
 
-    text-align: center;
-    font-size: 20px;
+    font-size: 17px;
+    font-family: welcome-text;
+
     letter-spacing: 2px;
 
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 
     .close-alert {
-        width: 100%;
-        height: 30px;
+        width: 50%;
+        height: 25px;
+        padding-top: 2px;
         background-color: $blue;
         border-radius: 5px;
         margin-top: 30px;
