--- a/scss/_homepage.scss
+++ b/scss/_homepage.scss
@@ -1,15 +1,17 @@
 main {
     width: 1440px;
-    margin-top: 0px;
-    padding: 20px;
+    height: auto;
+    margin-top: 30px;
+    padding: 20px 150px 50px;
 
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
 
     .image {
         width: 100%;
-        height: 300px;
+        height: 500px;
         margin-bottom: 60px;
         border-radius: 5px;
 
@@ -62,20 +64,11 @@ main {
         letter-spacing: 1px;
         color: $black;
         line-height: 25px;
+        font-size: 35px;
+        margin-top: 100px;
 
         position: relative;
 
-        &::before {
-            content: '';
-            position: absolute;
-            top: 32px;
-            left: 120px;
-            width: 10px;
-            height: 10px;
-            background-color: $blue;
-            opacity: 30%;
-            border-radius: 30px;
-        }
     }
 
     a {
