--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -3,6 +3,7 @@
     body, .container {
         width: 375px;
         overflow-x: hidden;
+        padding: 0;
     }
 
 
@@ -12,24 +13,45 @@
         padding: 20px;
     }
 
-    // #back {
-    //     background-color: red;
-    //     text-decoration: none;
-
-    //     margin-left: 0
-    
-    //     img {
-    //         width: 100px;
-    //         height: 40px;
-    //         margin-top: 20px;
-    //     }
-    // }
-
 
     main {
         width: 375px;
+        padding: 20px;
+        margin-top: 0;
+
+        .image {
+            height: 300px;
+
+
+            #hello-svg {
+                width: 100%;
+                height: 100%;
+            }
+        }
+
+
+
+        p {
+            font-size: 18px;
+            margin: 0;
+
+            &::before {
+                content: '';
+                position: absolute;
+                top: 32px;
+                left: 100px;
+                width: 10px;
+                height: 10px;
+                background-color: $blue;
+                opacity: 30%;
+                border-radius: 30px;
+            }
+        }
     }
     
+
+
+
 
     
     .input {
