--- a/scss/index.scss
+++ b/scss/index.scss
@@ -29,7 +29,7 @@ body {
 header {
     width: 1440px;
     height: auto;
-    padding: 20px;
+    padding: 30px 150px;
 
     display: flex;
     align-items: center;
