--- a/scss/_calculate.scss
+++ b/scss/_calculate.scss
@@ -9,10 +9,11 @@ img {
 
 
 .input {
-    width: 100%;
+    width: 60%;
     height: auto;
 
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
     padding: 20px;
@@ -26,19 +27,21 @@ img {
     #course-name {
         @extend %input;
         width: 600px;
-        height: 30px;
+        height: 35px;
+        font-size: 20px;
     }
     
     #course-unit {
         @extend %input;
         width: 80px;
-        height: 30px;
+        height: 35px;
+        font-size: 20px;
     }
 
     #course-grade {
         @extend %input;
         width: 80px;
-        height: 30px;
+        height: 35px;
         position: relative;
         z-index: 1000;
 
@@ -46,11 +49,13 @@ img {
         align-items: center;
         justify-content: flex-start;
 
+        
+
         &::before {
             content: '';
             position: absolute;
             top: 7px;
-            right: 15px;
+            right: 20px;
 
             width: 10px;
             height: 10px;
@@ -79,7 +84,7 @@ img {
 
 
     #grade-value {
-        font-size: 15px;
+        font-size: 20px;
         color: $white;
         text-align: center;
         margin-top: 2px;
@@ -106,7 +111,7 @@ img {
             width: 100%;
             color: white;
             padding: 8px 30px;
-            font-size: 15px;
+            font-size: 20px;
             font-family: welcome-text;
 
         }
@@ -127,9 +132,11 @@ img {
         color: $white; 
         font-family: welcome-text;
         letter-spacing: 1px;
-        font-size: 15px;
+        font-size: 20px;
         box-shadow: 1px 1px 10px 0px rgba(0, 0, 0, 0.1);
         padding-right: 10px;
+
+        margin-top: 20px;
     }
 }
 
@@ -152,8 +159,8 @@ img {
 
     .course-dts {
         width: 100%;
-        height: 30px;
-        padding: 0 10px;
+        height: 50px;
+        padding: 0 20px;
         background-color: blue;
         color: $white;
         border-radius: 10px;
@@ -165,24 +172,27 @@ img {
         justify-content: space-between;
         position: relative;
 
+        font-size: 20px;
+        font-family: welcome-text;
+
         & >* {
             padding: 5px;
         }
 
         &.delete {
             scale: 90%;
-            transform: translateX(-20px);
+            transform: translateX(-75px);
             transition: all 0.1s ease-in-out;
         }
 
         .remove-course {
-            width: 20px;
-            height: 20px;
+            width: 25px;
+            height: 25px;
             border-radius: 50%;
 
-            background-image: radial-gradient(white, red);
+            background-color: red;
             position: absolute;
-            top: 4px;
+            top: 10px;
             right: -35px;
         }
 
@@ -204,7 +214,7 @@ img {
 
     button {
         width: 100%;
-        height: 23px;
+        height: 40px;
         background-color: blue;
 
         font-family: welcome-text;
@@ -213,7 +223,7 @@ img {
         color: $white;
         outline: none;
         border: 0;
-        border-radius: 5px;
+        border-radius: 8px;
         margin-top: 50px;
 
         box-shadow: 1px 1px 10px 0px rgba(0, 0, 0, 0.3);
