--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -47,6 +47,12 @@
                 border-radius: 30px;
             }
         }
+
+        
+    a {
+        width: 100%;
+        height: 40px;
+    }
     }
     
 
@@ -55,16 +61,19 @@
 
     
     .input {
+        width: 100%;
         flex-wrap: wrap;
 
         #course-name {
             width: 200px;
             height: 20px;
+            font-size: 13px;
         }  
 
         #course-unit {
             width: 50px;
             height: 20px;
+            font-size: 13px;
         }
 
         #course-grade {
@@ -98,126 +107,66 @@
         
         
         button {
-            margin-top: 20px;
             width: 120px;
             height: 20px; 
+            font-size: 13px;
         }
 
 
     }
-
-
-}
-
-
-
-
-@media (max-width:760px) {
-    body, .container {
-        width: 700px;
-        overflow-x: hidden;
-        padding: 0;
-    }
-
-
-    header {
-        width: 700px;
-        height: auto;
-        padding: 50px;
-    }
-
-
-    main {
-        width: 700px;
-        padding: 50px;
-        margin-top: 0;
-
-        .image {
-            height: 500px;
-
-
-            #hello-svg {
-                width: 100%;
-                height: 100%;
-            }
-        }
-
-
-
-        p {
-            font-size: 18px;
-            margin: 0;
-
-            &::before {
-                content: '';
-                position: absolute;
-                top: 32px;
-                left: 100px;
-                width: 10px;
-                height: 10px;
-                background-color: $blue;
-                opacity: 30%;
-                border-radius: 30px;
-            }
-        }
-    }
-    
-
-
-
-
-    
-    .input {
-        flex-wrap: wrap;
-
-        #course-name {
-            width: 400px;
-            height: 30px;
-        }  
-
-        #course-unit {
-            width: 70px;
-            height: 30px;
-        }
-
-        #course-grade {
-            width: 70px;
-            height: 30px;
-    
-            &::before {
-                top: 3px;
-                right: 10px;
-                width: 8px;
-                height: 8px;
-            }
-    
-
-            #grade-value {
-                font-size: 13px;
-            }
-
-            .grade-options {
-                top: 30px;
-        
-                #grade{
-                    padding: 5px 10px;
-                    font-size: 15px;
-                }
-            }
             
-    
-    
-        }
-        
-        
-        button {
-            margin-top: 20px;
-            width: 150px;
-            height: 30px; 
+    .output {
+        width: 100%;
+        height: auto;
+
+        padding: 20px;
+        margin-top: 30px;
+
+
+        .output-control {
+            overflow-x: hidden;
         }
 
+
+        .course-dts {
+            height: 30px;
+            padding: 0 10px;
+            font-size: 13px;
+        
+            &.delete {
+                transform: translateX(-20px);
+            }
+
+            .remove-course {
+                width: 20px;
+                height: 20px;
+                top: 4px;
+                right: -35px;
+            }
+
+        }
+
+
+    
+        button {
+            width: 100%;
+            height: 23px;
+            border-radius: 5px;
+        }
+        
 
     }
 
 
+
+
+
+
+
+
+
+
+
 }
+
+
