--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -144,6 +144,11 @@
                 right: -35px;
             }
 
+            &.deleted {
+                transform: translateX(-150%);
+                transition: all 0.3s ease-in-out;
+            }
+
         }
 
 
