--- a/scss/_calculate.scss
+++ b/scss/_calculate.scss
@@ -258,17 +258,19 @@ img {
 
 .blur {
     position: absolute;
-    width: 100vw;
+    width: 1440px;
     height: 100vh;
-    background-color: rgba(0, 0, 0, 0.7);
+    background-color: rgba(0, 0, 0, 0.5);
     z-index: 1500;
     display: none;
+
+    margin:0;
 }
 
 
 
 .result-display {
-    width: 80%;
+    width: 300px;
     height: 300px;
     border-radius: 10px;
 
@@ -278,6 +280,7 @@ img {
     top: 20%;
     left: 10%;
 
+    display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
@@ -290,7 +293,7 @@ img {
         border-radius: 50%;
         text-align: center;
 
-        background-image: radial-gradient(white, red);
+        background-color: red;
         position: absolute;
         top: -30px;
         right: 0;
@@ -345,36 +348,36 @@ img {
 
 
 
-.error-msg {
-    width: 80%;
-    height: 80px;
-    padding: 25px 20px;
-    border-radius: 10px;
-    background-color: $white;
-    z-index: 3000;
-    position: absolute;
-    top: 40%;
-    left: 10%;
+// .error-msg {
+//     width: 80%;
+//     height: 80px;
+//     padding: 25px 20px;
+//     border-radius: 10px;
+//     background-color: $white;
+//     z-index: 3000;
+//     position: absolute;
+//     top: 40%;
+//     left: 10%;
 
-    font-size: 17px;
-    font-family: welcome-text;
+//     font-size: 17px;
+//     font-family: welcome-text;
 
-    letter-spacing: 2px;
+//     letter-spacing: 2px;
 
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+//     display: flex;
+//     flex-direction: column;
+//     align-items: center;
+//     justify-content: center;
 
-    .close-alert {
-        width: 50%;
-        height: 25px;
-        padding: 2px 0 ;
-        background-color: $blue;
-        border-radius: 5px;
-        margin-top: 20px;
-        color: $white;
-        text-align: center;
-        letter-spacing: 5px;
-    }
-}
+//     .close-alert {
+//         width: 50%;
+//         height: 25px;
+//         padding: 2px 0 ;
+//         background-color: $blue;
+//         border-radius: 5px;
+//         margin-top: 20px;
+//         color: $white;
+//         text-align: center;
+//         letter-spacing: 5px;
+//     }
+// }
