--- a/scss/_calculate.scss
+++ b/scss/_calculate.scss
@@ -270,15 +270,15 @@ img {
 
 
 .result-display {
-    width: 300px;
-    height: 300px;
+    width: 500px;
+    height: 350px;
     border-radius: 10px;
 
     background-color: $white;
     z-index: 2000;
     position: absolute;
     top: 20%;
-    left: 10%;
+    left: 450px;
 
     display: flex;
     flex-direction: column;
