--- a/scss/_calculate.scss
+++ b/scss/_calculate.scss
@@ -283,8 +283,9 @@ img {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+
     display: none;
+
 
 
     #close {
@@ -297,6 +298,12 @@ img {
         position: absolute;
         top: -30px;
         right: 0;
+    }
+
+    #happy-announcement {
+        width: auto;
+        height: 100px;
+        margin: 30px 20px 30px;
     }
 
     p {
@@ -334,6 +341,7 @@ img {
 
         h1 {
             margin-bottom: 15px;
+            font-size: 30px;
         }
 
         #gpa {
