--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -14,6 +14,11 @@
     }
 
 
+    #info {
+        margin-top: 10px;
+        margin-right: 0;
+    }
+
     main {
         width: 375px;
         padding: 20px;
