--- a/scss/_tablet.scss
+++ b/scss/_tablet.scss
@@ -14,6 +14,11 @@
         padding: 50px;
     }
 
+    #info {
+        margin-top: 10px;
+        margin-right: 0;
+    }
+
 
     main {
         width: 760px;
