--- a/scss/_calculate.scss
+++ b/scss/_calculate.scss
@@ -101,7 +101,7 @@ img {
         height: auto;
         border-radius: 5px;
 
-        background-color: blue;
+        background-color: $blue;
         box-shadow: 1px 1px 15px 0px rgba(0, 0, 0, 0.3);
         display: none;
 
@@ -160,7 +160,7 @@ img {
         width: 100%;
         height: 50px;
         padding: 0 20px;
-        background-color: blue;
+        background-color: $blue;
         color: $white;
         border-radius: 10px;
 
@@ -214,7 +214,7 @@ img {
     button {
         width: 100%;
         height: 40px;
-        background-color: blue;
+        background-color: $blue;
 
         font-family: welcome-text;
         font-size: 18px;
@@ -249,7 +249,7 @@ img {
     .msg {
         width: 100%;
         height: 400px;
-        background-color: blue;
+        background-color: $blue;
         border-radius: 5px;
     }
 }
