--- a/scss/_calculate.scss
+++ b/scss/_calculate.scss
@@ -271,8 +271,8 @@ img {
     width: 80px;
     height: 80px;
     border-radius: 50%;
-    border: 5px solid $blue;
-    border-right:2px solid $white;
+    border: 2px solid $white;
+    border-right:1px solid $blue;
 
     position: absolute;
     z-index: 20000;
@@ -288,14 +288,18 @@ img {
 
 
 @keyframes anim1 {
-    from {
-        transform: rotate(0);
+    0% {
+        transform: rotate(0deg);
         opacity: 0;
-        
     }
 
-    to {
-        transform: rotate(2turn);
+    50% {
+        transform: rotate(180deg);
+        opacity: 0.5;
+    }
+
+    100% {
+        transform: rotate(360deg);
         opacity: 1;
     }
 }
