--- a/scss/index.scss
+++ b/scss/index.scss
@@ -23,184 +23,72 @@ body {
 }
 
 
-header {
-    width: 1440px;
-    height: auto;
-    padding: 30px 150px;
-
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-
-    div {
-        width: 30px;
-        height: 30px;
-        border-radius: 5px;
-        background-color: $blue;
-    }
-
-
-
-    #logo {
-        position: relative;
-        border-radius: 50%;
-        transform: scale(110%);
-        animation: animate 3s ease-in-out infinite;
-        box-shadow: 1px 1px 90px 3px $blue;
-
-        &::before {
-            content:'';
-            position: absolute;
-            top: 5px;
-            right: -10px;
-            background-color: $blue;
-            opacity: 50%;
-
-            width: 30px;
-            height: 30px;
-            border-radius: 50%;
-            animation: animate 3s ease-in-out infinite;
-        }
-
-    }
-
-
-}
-
-
 nav {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-
-    #info {
-        width: 25px;
-        height: 25px;
-
-        display: flex;
-        align-items: center;
-        justify-content: space-around;
-        flex-direction: column;
-
-        border-radius: 50%;
-        margin-top: 15px;
-        margin-right: 15px;
-
-        box-shadow: 1px 1px 10px rgba(61, 61, 250, 0.2);
-        padding: 3px;
-
-        & > * {
-            width: 4px;
-            height: 4px;
-            border-radius: 50%;
-            background-color: $black;
-        }
-    }
-}
-
-
-main {
-    width: 1440px;
+    width: 100%;
     height: auto;
-    margin-top: 30px;
-    padding: 20px 150px 50px;
 
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    padding: 0 10px;
 
-    .image {
-        width: 100%;
-        height: 500px;
-        margin-bottom: 60px;
-        border-radius: 5px;
+    .info {
+        width: auto;
+        height: auto;
 
-        position: relative;
-        display: flex;
-        align-items: center;
-        justify-content: center;
+        padding: 10px;
 
-
-
-        #hello-svg {
-            width: 100%;
-            height: 100%;
+        #top {
+            width: 30px;
+            height: 6px;
+            background-color: darken($color: $blue, $amount: 20%);
+            border-radius: 2px;
+            margin-bottom: 5px;
         }
 
-
-        #border {
-            border:3px solid $blue;
-            border-radius: 5px;
-            position: absolute;
-
-
-            &:first-of-type {
-                top: 0;
-                left: 0;
-                width: 100px;
-                height: 50px;
-                border-right: none;
-                border-bottom: none;
-            }
-
-
-            &:last-of-type {
-                bottom: 0;
-                right: 0;
-                width: 70px;
-                height: 110px;
-
-                border-top: none;
-                border-left: none;
-            }
+        #bottom {
+            width: 15px;
+            height: 6px;
+            background-color: darken($color: $blue, $amount: 20%) ;
+            border-radius: 2px;
         }
 
-    }
-
-
-    p {
-        text-align: right;
-        font-family: welcome-text;
-        letter-spacing: 1px;
-        color: $black;
-        line-height: 25px;
-        font-size: 35px;
-        margin-top: 100px;
-
-        position: relative;
-
-    }
-
-    a {
-        width: 100%;
-        height: 50px;
-        border-radius: 8px;
-        margin-top: 70px;
-        text-decoration: none;
-        position: relative;
-
-        button {
-            background-color: $blue;
-            border-radius: 8px;
-            width: 100%;
-            height: 100%;
-            color: $white;
-            outline: none;
-            border: 0;
-    
-            box-shadow: 2px 2px 15px 2px rgba(0, 0, 0, 0.3);
-
-            text-align: center;
-            font-size: 20px;
-            font-family: welcome-text;
-            letter-spacing: 2px;
-            position: relative;
-
-        }
-
-    }
+    }   
 }
+
+
+
+.info-tab {
+    width: 100%;
+    height: 100vh;
+    background-color: white;
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    z-index: 200000;
+    transform: translateX(-100vw);
+    opacity: 0;
+    visibility: hidden;
+    
+}
+
+.info-tab.active {
+    transform: translateX(0);
+    opacity: 1;
+    visibility: visible;
+
+    transition: all 0.3s ease-in-out;
+}
+
+
+#close-info {
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+
+    background-color: red;
+
+    margin: 10px 20px;
+}
+
 
 @import 'calculate';
 @import 'mobile';
