--- a/scss/_tablet.scss
+++ b/scss/_tablet.scss
@@ -1,8 +1,8 @@
 
 
-@media (min-width: 415px) and (max-width:768px) {
+@media (min-width: 431px) and (max-width:768px) {
     body, .container {
-        width: 760px;
+        width: 100vw;
         overflow-x: hidden;
         padding: 0;
     }
