--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -1,7 +1,7 @@
 
-@media (max-width:414px) {
+@media (max-width:430px) {
     body, .container {
-        width: 375px;
+        width: 100vw;
         overflow-x: hidden;
         padding: 0;
     }
