--- a/scss/index.scss
+++ b/scss/index.scss
@@ -27,10 +27,11 @@ nav {
     width: 100%;
     height: auto;
 
-    padding: 0 10px;
+    padding: 0 0px;
 
     .info {
-        width: auto;
+        float: right;
+        width: max-content;
         height: auto;
 
         padding: 10px;
@@ -38,7 +39,7 @@ nav {
         #top {
             width: 30px;
             height: 6px;
-            background-color: darken($color: $blue, $amount: 20%);
+            background-color: $blue;
             border-radius: 2px;
             margin-bottom: 5px;
         }
@@ -46,8 +47,10 @@ nav {
         #bottom {
             width: 15px;
             height: 6px;
-            background-color: darken($color: $blue, $amount: 20%) ;
+            background-color:$blue;
             border-radius: 2px;
+
+            float: right;
         }
 
     }   
