--- a/scss/index.scss
+++ b/scss/index.scss
@@ -7,54 +7,399 @@
 }
 
 
-body {
-    width: 1440px;
-    height: auto;
-    margin: 0 auto;
-    background-color: $white;
-}
-
 
 .container {
-    width: 1440px;
+    width: 100vw;
     height: auto;
     position: relative;
+
+    margin: 0 auto;
+    height: auto;
     background-color: $white;
+    
 }
+
+
+
+
+.intro-loader {
+    width: 100%;
+    height: 100vh;
+    background-color: $blue;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    animation: remove-intro 2s forwards 2s;
+    transition: all 0.3s ease-out;
+}
+
+
+.il {
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    background-color: white;
+
+    animation: intro-animation 3s infinite;
+}
+
+
+
+.logo {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+
+    background-color: $blue;
+    color: white;
+    box-shadow: -8px 8px 40px 0 rgba(0, 0, 0, 0.1);
+
+
+    
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+
+@keyframes intro-animation {
+    0% {
+        transform: scale(100%);
+    }
+
+    50% {
+        transform: scale(80%);
+    }
+
+    100% {
+        transform: translateY(10px);
+    }
+}
+
+
+@keyframes remove-intro {
+    0% {
+        transform: translateY(0);
+    }
+
+    100% {
+        transform: translateY(-100vh);
+    }
+}
+
+
+
+
+
+
+.calculator-page {
+    width: 100%;
+    height: auto;
+
+    transition: all 0.3s ease-in;
+    display: none;
+    visibility: hidden;
+    opacity: 0;
+}
+
+.calculator-page.active {
+    display: block;
+    visibility: visible;
+    opacity: 1;
+
+    transition: all 0.3s ease-in;
+}
+
+
+
+
+
+.input {
+    width: 100%;
+    height: auto;
+
+    display: flex;
+    flex-wrap: wrap;
+
+    align-items: center;
+    justify-content: space-between;
+    padding: 20px;
+    color: $white;
+
+
+    .input-control {
+        position: relative;
+        margin-top: 15px;
+    }
+
+
+    .input-control:first-of-type {
+        width: 60%;
+    }
+
+
+    #course-name {
+        @extend %input;
+        width: 100%;
+        height: 20px;
+        font-size: 15px;
+    }
+
+
+    
+    #course-unit {
+        @extend %input;
+        width: 50px;
+        height: 20px;
+        font-size: 15px;
+    }
+
+    #course-grade {
+        @extend %input;
+        width: 50px;
+        height: 20px;
+        position: relative;
+        z-index: 1000;
+
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+
+        
+
+        &::before {
+            content: '';
+            position: absolute;
+            top: 3px;
+            right: 10px;
+
+            width: 8px;
+            height: 8px;
+            border: 1px solid white;
+            border-right: 0;
+            border-top: 0;
+
+            transform: rotate(-45deg);
+            transition: transform 0.3s ease-in-out;
+            z-index: 1000;
+        }
+
+        
+
+
+        &.active::before {
+            top: 7px;
+            transform: rotate(135deg);
+            transition: transform 0.3s ease-in-out;
+        }
+        &.active .grade-options {
+            display: flex;
+        }
+
+    }
+
+
+    #grade-value {
+        font-size: 13px;
+        color: $white;
+        text-align: center;
+        margin-top: 2px;
+    }
+
+
+    .grade-options {
+        position: absolute;
+        top: 30px;
+        display: flex;
+        flex-direction: column;
+        font-family: welcome-text;
+        
+        width: 100%;
+        height: auto;
+        border-radius: 5px;
+
+        background-color: $blue;
+        box-shadow: 1px 1px 15px 0px rgba(0, 0, 0, 0.3);
+        display: none;
+
+
+        #grade{
+            width: 100%;
+            color: white;
+            padding: 5px 10px;
+            font-size: 15px;
+            font-family: welcome-text;
+
+        }
+
+        #grade:hover {
+            background-color: white;
+            color: black;
+            border-radius: 5px;
+        }
+    }
+
+
+
+    button {
+        @extend %input;
+        width: 150px;
+        height: 20px; 
+        color: $white; 
+        font-family: welcome-text;
+        letter-spacing: 1px;
+        font-size: 15px;
+        box-shadow: 1px 1px 10px 0px rgba(0, 0, 0, 0.1);
+        padding-right: 10px;
+
+        margin-top: 20px;
+    }
+}
+
+
+
+@media (min-width:664px) {
+    .input {
+        width: 664px;
+    }
+}
+
 
 
 nav {
     width: 100%;
     height: auto;
 
-    padding: 0 0px;
+    padding: 20px;
 
     .info {
-        float: right;
-        width: max-content;
+        width: auto;
         height: auto;
 
         padding: 10px;
 
         #top {
             width: 30px;
-            height: 6px;
+            height: 3px;
             background-color: $blue;
             border-radius: 2px;
             margin-bottom: 5px;
         }
 
         #bottom {
-            width: 15px;
-            height: 6px;
+            width: 20px;
+            height: 3px;
             background-color:$blue;
             border-radius: 2px;
-
-            float: right;
         }
 
     }   
 }
+
+
+
+
+.output {
+    width: 100%;
+    height: auto;
+
+    padding: 20px;
+    margin-top: 30px;
+    position: relative;
+
+
+    .output-control {
+        overflow-x: hidden;
+    }
+
+
+    .course-dts {
+        width: 100%;
+        height: 25px;
+        padding: 0 20px;
+        background-color: $blue;
+        color: $white;
+        border-radius: 5px;
+
+        margin-bottom: 20px;
+
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        position: relative;
+
+        font-size: 15px;
+        font-family: welcome-text;
+
+        & >* {
+            padding: 5px;
+        }
+
+        &.delete {
+            scale: 90%;
+            transform: translateX(-25px);
+            transition: all 0.1s ease-in-out;
+        }
+
+
+        .remove-course {
+            width: 20px;
+            height: 20px;
+            border-radius: 100%;
+
+            background-color: red;
+            position: absolute;
+            top: 2px;
+            right: -35px;
+        }
+
+        &.deleted {
+            transform: translateX(-150%);
+            transition: all 0.3s ease-in-out;
+        }
+    }
+
+
+    
+    .msg {
+        text-align: center;
+        color: $blue;
+        font-family: welcome-text;
+        letter-spacing: 2px;
+    }
+    
+
+    button {
+        width: 100%;
+        height: 25px;
+        background-color: $blue;
+
+        font-family: welcome-text;
+        font-size: 18px;
+        letter-spacing: 2px;
+        color: $white;
+        outline: none;
+        border: 0;
+        border-radius: 5px;
+        margin-top: 50px;
+
+        box-shadow: 1px 1px 10px 0px rgba(0, 0, 0, 0.3);
+
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    
+
+}
+
+
+
+
+
+
+
 
 
 
@@ -93,6 +438,8 @@ nav {
 }
 
 
+
+
+
+
 @import 'calculate';
-@import 'mobile';
-@import 'tablet';
